test_cases/negative/compiler/recursive_import_1.snek
import "./recursive_import_2.snek" as lib;
